<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteRed"
    tools:context="com.cristhoper.paginasamarillasapp.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiteRed"
        android:padding="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">
                    <EditText
                        android:id="@+id/etBuscador"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/QueBusca"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"
                    android:text="@string/Donde"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnCiudades"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/bg_shape_button"
                        style="@style/CapitalizeButton"
                        android:text="@string/Ciudades" />
                    <Button
                        android:id="@+id/btnCercaDeMi"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/bg_shape_button"
                        style="@style/CapitalizeButton"
                        android:text="@string/CercaDeMi" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/UstedEstaEn"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="  Lima, Perú"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
